tests/snapshots/pretty_print__for_expression.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
fn foo() {
    for x in 1 {
        2;
        
    };
    
}
