tests/snapshots/pretty_print__if_expression.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
fn foo() {
    if 1 {
        2;

    } else if 3 {
        4;

    } else {
        5;

    };

}
