tests/snapshots/pretty_print__impl.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
// A simple impl.
impl MyStruct { fn new() {} }
