tests/snapshots/pretty_print__it_works.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
// A simple function.
fn foo(){
    /* An inner comment */
    42;
}
// Trailing comment.
