tests/snapshots/pretty_print__item_statement.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
fn foo() {
struct MyStruct {}
}
