tests/snapshots/pretty_print__let_else_statement.snap
---
source: tests/pretty_print.rs
expression: pretty(&ast)
---
fn foo() {
    let (Some, x) = "Some"(1) else {
        return;
    }
}
