tests/snapshots/pretty_print__let_statement.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
fn foo()  {
    let x: i32 = 42;
}
