tests/snapshots/pretty_print__long_binary_expression.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
fn foo() {
    "a_very_long_string_that_should_cause_a_line_break"
        + "another_very_long_string_that_should_also_cause_a_line_break"
    ;
}
