tests/snapshots/pretty_print__long_enum.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
enum MyLongLongLongLongLongEnum {
    AVeryLongVariantNameThatShouldCauseALineBreak,
    AnotherVeryLongVariantNameThatShouldAlsoCauseALineBreak,
}
