tests/snapshots/pretty_print__loop_expression.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
fn foo() {
    loop {
        1;

    };

}
