tests/snapshots/pretty_print__macro_call_expression.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
fn foo() {
    println!("hello");
}
