tests/snapshots/pretty_print__macro_call_expression_with_path.snap
---
source: tests/pretty_print.rs
expression: pretty(&ast)
---
fn foo() {
    std::println!("hello");
}
